<resources>
    <string name="app_name">Octopius Game</string>
    <string name="red_dead_redemption_2">Red Dead Redemption 2</string>
    <string name="subtitle">BASE GAME</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_account">Change Account</string>
    <string name="account_details">Account Details</string>
    <string name="inventory">Inventory</string>
    <string name="badges">Badges</string>
    <string name="screenshots_videos">Screenshots/Videos</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="friend_activity">Friend Activity</string>
    <string name="my_content">MY CONTENT</string>
    <string name="add_funds_wallet">Add Funds Wallet</string>
    <string name="_5_n_games">5\n Games</string>
    <string name="view_profile">View Profile</string>
    <string name="add_friends">Add Friends</string>
    <string name="name">NOME DO JOGO</string>
    <string name="price">R$ 99,99</string>
    <string name="buy_now">BUY NOW</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refund_type">Refund Type</string>
    <string name="self_refundable">Self-Refundable</string>
    <string name="developer">Developer</string>
    <string name="game_dev">GAME DEVELOPER</string>
    <string name="publisher">Publisher</string>
    <string name="game_pub">GAME PUBLISHER</string>
    <string name="release_date">Release Date</string>
    <string name="release">DD/MM/AA</string>
    <string name="platform">Platform</string>
    <string name="game_informer">Game Informer</string>
    <string name="author1">by James Salad Fruit</string>
    <string name="note1">9.80 / 10</string>
    <string name="review1">This game is amazing! The gameplay is\nimmersive and the graphics are stunning. I\'m\naddicted to the exciting challenges it offers. I\nrecommend it to all game lovers!</string>
    <string name="author2">by Mango Joe</string>
    <string name="note2">9.97 / 10</string>
    <string name="review2">This game is simply addictive! The levels\nare well crafted and the difficulty gradually\nincreases, keeping the challenge always\ninteresting. Sound effects and soundtrack\ncontribute to an immersive experience. I\ncan\'t stop playing!</string>
    <string name="author3">by Blue Pen</string>
    <string name="note3">9.63 / 10</string>
    <string name="review3">Blue pen, blue pen; look, if you don\'t love me,\nplease don\'t call me and don\'t complain…</string>
    <string name="provider">Reviews Provided by Octopius Games</string>
    <string name="specifications">Specifications</string>
    <string name="windows">Windows</string>
    <string name="minimum">Minimum</string>
    <string name="recommended">Recommended</string>
    <string name="os">OS</string>
    <string name="windows_10">Windows 10</string>
    <string name="processor">Processor</string>
    <string name="intel_core_i7_4770k">Intel Core i7 – 4770K</string>
    <string name="memory">Memory</string>
    <string name="_12_gb_ram">12 GB RAM</string>
    <string name="storage">Storage</string>
    <string name="_150_gb">150 GB</string>
    <string name="direct_x">Direct X</string>
    <string name="_12">12</string>
    <string name="graphics">Graphics</string>
    <string name="logins">Logins</string>
    <string name="requirements">Requires OctopiusGame account</string>
    <string name="languages_supported">Languages Supported</string>
    <string name="languages">AUDIO: English,\nTEXT: English, French, Italian, German, Spanish - Spain, Portuguese - Brazil, Russian, Polish, Spanish - Latin America, Korean, Chinese - Simplified, Chinese - Traditional, Czech, Japanese</string>
    <string name="copyright">All rights reserved. The game and all of its elements are protected by copyright laws and international treaties. Reproduction, distribution, modification or any form of use without prior written authorization from the developer company is prohibited.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="_24_n_friends">24\n Friends</string>
    <string name="exit">Exit</string>
    <string name="about_the_game">ABOUT THE GAME</string>
    <string name="game_reviews">GAME REVIEWS</string>
    <string name="adicionado_em_20_10_2022">Adicionado em 20/10/2022</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="menu_deslizante">Menu Deslizante</string>
    <string name="favoritos">Favoritos</string>
    <string name="adicionado_em_20_08_2021">Adicionado em 20/08/2021</string>
    <string name="call_of_duty_modern_warfare">Call of Duty: Modern Warfare</string>

    <string-array name="nomesJogos">
        <item>Rocket League</item>
        <item>God Of War: Ragnarok</item>
        <item>Elden Ring</item>
        <item>Red Dead Redemption 2</item>
        <item>Call of Duty: Modern Warfare</item>
        <item>Battlefield 2042</item>
    </string-array>

    <string-array name="dataJogos">
        <item>14/05/2022</item>
        <item>12/05/2022</item>
        <item>31/02/2022</item>
        <item>17/04/2023</item>
        <item>16/04/2023</item>
        <item>14/04/2023</item>
    </string-array>

    <string name="abrir">Abrir</string>
    <string name="visitar_p_gina_na_loja">Visitar página na loja</string>
    <string name="rocket_league">Rocket League</string>
    <string name="_14_05_2022">14/05/2022</string>
    <string name="god_of_war_ragnarok">God Of War: Ragnarok</string>
    <string name="_12_05_2022">12/05/2022</string>
    <string name="elden_ring">Elden Ring</string>
    <string name="_31_02_2022">31/02/2022</string>
    <string name="_17_04_2023">17/04/2023</string>
    <string name="_16_04_2023">16/04/2023</string>
    <string name="battlefield_2042">Battlefield 2042</string>
    <string name="_14_04_2023">14/04/2023</string>
    <string name="username">Username</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="edit_profile">Edit Profile</string>
</resources>
