<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:id="@+id/imagePerson"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username"
                android:layout_width="140dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/username"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imagePerson"
                app:layout_constraintTop_toTopOf="@id/imagePerson"
                tools:ignore="MissingConstraints" />
            <Button
                android:id="@+id/editProfbtn"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/edit_profile"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:backgroundTint="#1997FE"
                app:layout_constraintStart_toEndOf="@id/imagePerson"
                app:layout_constraintTop_toBottomOf="@id/username"
                tools:ignore="SmallSp" />
            <View
                android:id="@+id/divisor0"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#555657"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintTop_toBottomOf="@id/imagePerson"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divisor0"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal"
                android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_5_n_games"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:backgroundTint="#1997FE"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_24_n_friends"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:backgroundTint="#1997FE"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/add_funds_wallet"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:backgroundTint="#1997FE"
                android:layout_weight="150"/>
            </LinearLayout>
            <Button
                android:id="@+id/addfriendsbtn_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:backgroundTint="#1997FE"
                android:drawableLeft="@drawable/ic_person"
                android:text="@string/add_friends"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttons"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:id="@+id/contentTitle"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:text="@string/my_content"
                android:layout_marginStart="20dp"
                android:textSize="11sp"
                android:textColor="#808080"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addfriendsbtn_profile"/>
            <Button
                android:id="@+id/friend_activity"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@android:color/transparent"
                android:text="@string/friend_activity"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/contentTitle"/>
            <View
                android:id="@+id/divisor1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#555657"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/friend_activity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <Button
                android:id="@+id/friend_list"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@android:color/transparent"
                android:text="@string/friends"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/divisor1"/>
            <View
                android:id="@+id/divisor2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#555657"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/friend_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <Button
                android:id="@+id/group_list"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@android:color/transparent"
                android:text="@string/groups"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/divisor2"/>
            <View
                android:id="@+id/divisor3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#555657"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/group_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <Button
                android:id="@+id/screenshot_videos"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@android:color/transparent"
                android:text="@string/screenshots_videos"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/divisor3"/>
            <View
                android:id="@+id/divisor4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#555657"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintTop_toBottomOf="@id/screenshot_videos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <Button
                android:id="@+id/badges_list"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@android:color/transparent"
                android:text="@string/badges"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/divisor4"/>
            <View
                android:id="@+id/divisor5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#555657"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/badges_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <Button
                android:id="@+id/inventory"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@android:color/transparent"
                android:text="@string/inventory"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/divisor5"/>
            <View
                android:id="@+id/divisor6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#555657"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/inventory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <Button
                android:id="@+id/acc_details"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/account_details"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/divisor6"
                app:drawableRightCompat="@drawable/ic_next" />
            <View
                android:id="@+id/divisor7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#555657"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintTop_toBottomOf="@id/acc_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <Button
                android:id="@+id/change_acc"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/change_account"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textAllCaps="false"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/divisor7"
                app:drawableEndCompat="@drawable/ic_next" />
            <View
                android:id="@+id/divisor8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#555657"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/change_acc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <Button
                android:id="@+id/sign_out"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/sign_out"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:gravity="start"
                app:layout_constraintTop_toBottomOf="@id/divisor8"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
